# vite-task

./: .clippy.toml  .gitignore  .oxfmtrc.json  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  vite.config.ts
crates/fspy/: Cargo.toml  build.rs
crates/fspy/src/: command.rs  lib.rs
crates/fspy/src/unix/: macos_artifacts.rs  mod.rs
crates/fspy/src/windows/: mod.rs
crates/fspy/tests/: node_fs.rs  oxlint.rs  rust_std.rs  winapi.rs
crates/fspy_shared/: Cargo.toml
crates/fspy_shared/src/ipc/: native_path.rs
crates/fspy_shared/src/ipc/channel/: mod.rs  shm_io.rs
crates/fspy_shm/: Cargo.toml  README.md
crates/fspy_shm/src/: lib.rs
crates/fspy_shm/src/linux/: README.md  broker.rs  mod.rs
crates/fspy_shm/src/macos/: README.md  mod.rs
crates/fspy_shm/src/windows/: README.md  mod.rs  sys.rs
crates/pty_terminal/: Cargo.toml
crates/pty_terminal/src/: terminal.rs
crates/pty_terminal/tests/: terminal.rs
crates/pty_terminal_test_client/: Cargo.toml
crates/pty_terminal_test_client/src/: lib.rs
crates/vite_ipc/: Cargo.toml  README.md
crates/vite_ipc/src/: lib.rs  unix.rs  windows.rs
crates/vite_ipc/tests/: integration.rs
crates/vite_shell/: Cargo.toml
crates/vite_shell/src/: lib.rs
crates/vite_task/: Cargo.toml  build.rs
crates/vite_task/docs/: boolean-flags.md  task-cache.md  task-query.md  wildcard-env-patterns.md
crates/vite_task/src/: execute.rs  lib.rs  napi_client.rs
crates/vite_task/src/cli/: mod.rs
crates/vite_task/src/session/: event.rs  mod.rs
crates/vite_task/src/session/cache/: display.rs  mod.rs
crates/vite_task/src/session/execute/: cache_update.rs  fingerprint.rs  mod.rs  scheduler.rs  spawn.rs  tracked_accesses.rs
crates/vite_task/src/session/reporter/: mod.rs  summary.rs
crates/vite_task_bin/: Cargo.toml
crates/vite_task_bin/src/: lib.rs  main.rs
crates/vite_task_bin/src/vtt/: cp.rs  grep_file.rs  list_dir.rs  main.rs  small_dev_shm.rs  stat_file.rs  stat_long_filename.rs
crates/vite_task_bin/tests/e2e_snapshots/: main.rs  redact.rs
crates/vite_task_bin/tests/e2e_snapshots/fixtures/associate_existing_cache/: package.json  snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/builtin_different_cwd/: package.json  snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache_disabled/: snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache_miss_command_change/: snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache_miss_reasons/: snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache_subcommand/: snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache_task_select/: package.json  snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/colon_in_name/: package.json  snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/concurrent_execution/: package.json  snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/constrained_dev_shm/: snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/ctrl_c/: package.json  snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/env_negation/: snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/error_cycle_dependency/: snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/exit_codes/: snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/filter_unmatched/: snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/glob_base_test/: snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/grouped_stdio/: package.json  snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/individual_cache_for_adt_args/: package.json  snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/individual_cache_for_env/: snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/input_cache_test/: snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/input_glob_meta_in_path/: snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/input_negative_glob_subpackage/: snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/input_read_write_not_cached/: snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/interleaved_stdio/: package.json  snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/ipc_client_test/: package.json  snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/labeled_stdio/: package.json  snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/legacy_cache_ignored/: package.json  snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/malformed_fspy_path/: package.json  snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/output_cache_test/: snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/parallel_execution/: package.json  snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/pass_args_to_task/: snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/preexisting_ld_preload/: package.json  preload_test_short_circuit.txt  real.txt  snapshots.toml  vite-task.json
crates/vite_task_client/: Cargo.toml  README.md
crates/vite_task_client/src/: lib.rs
crates/vite_task_client_napi/: Cargo.toml  README.md  build.rs
crates/vite_task_client_napi/src/: lib.rs
crates/vite_task_graph/: Cargo.toml  run-config.ts
crates/vite_task_graph/src/: display.rs  lib.rs
crates/vite_task_graph/src/config/: mod.rs  user.rs
crates/vite_task_graph/src/query/: mod.rs
crates/vite_task_ipc_shared/: Cargo.toml  README.md
crates/vite_task_ipc_shared/src/: lib.rs
crates/vite_task_server/: Cargo.toml  README.md
crates/vite_task_server/src/: lib.rs
crates/vite_task_server/tests/: integration.rs
(+751 files in other folders)
