[package]
name = "fspy_shm"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
memmap2 = { workspace = true }
passfd = { workspace = true, features = ["async"] }
rustix = { workspace = true, features = ["fs", "net", "process"] }
tokio = { workspace = true, features = ["macros", "net", "rt", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
base64 = { workspace = true }
memmap2 = { workspace = true }
rustix = { workspace = true, features = ["fs", "shm"] }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
uuid = { workspace = true, features = ["v4"] }
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_Memory",
] }

[dev-dependencies]
ctor = { workspace = true }
subprocess_test = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[lib]
doctest = false

[package.metadata.cargo-shear]
ignored = ["ctor"]
