[package]
name = "pty_terminal"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
portable-pty = { workspace = true }
vt100 = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
ctrlc = { workspace = true }
ntest = { workspace = true }
subprocess_test = { workspace = true, features = ["portable-pty"] }
terminal_size = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
nix = { workspace = true }
signal-hook = "0.3"

[lints]
workspace = true

[lib]
test = false
doctest = false

[package.metadata.cargo-shear]
ignored = ["ctor"]
