[package]
name = "pty_terminal_test_client"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[features]
default = []
testing = ["dep:getrandom", "dep:winapi"]

[dependencies]
base64 = { workspace = true }
getrandom = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["wincon"], optional = true }

[dev-dependencies]
getrandom = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
