[package]
name = "vite_ipc"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["io-util", "net"] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["v4"] }
vite_path = { workspace = true }

[target.'cfg(windows)'.dependencies]
uuid = { workspace = true, features = ["v4"] }
winapi = { workspace = true, features = ["namedpipeapi"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true

[lib]
doctest = false
test = false
