[package]
name = "vite_task"
version = "0.0.0"
edition.workspace = true
include = ["/src", "/build.rs"]
license.workspace = true
publish = false
readme = "README.md"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
wincode = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
derive_more = { workspace = true, features = ["debug", "from"] }
futures-util = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }
petgraph = { workspace = true }
pty_terminal_test_client = { workspace = true }
rayon = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "io-std",
  "io-util",
  "macros",
  "process",
  "sync",
] }
tokio-util = { workspace = true }
tracing = { workspace = true }
twox-hash = { workspace = true }
vite_path = { workspace = true }
vite_select = { workspace = true }
vite_str = { workspace = true }
vite_task_graph = { workspace = true }
vite_task_plan = { workspace = true }
vite_workspace = { workspace = true }
wax = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
fspy = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["handleapi", "jobapi2", "winnt"] }

[lib]
doctest = false
