[package]
name = "vite_task_client"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
native_str = { workspace = true }
rustc-hash = { workspace = true }
vite_ipc = { workspace = true }
vite_path = { workspace = true }
vite_task_ipc_shared = { workspace = true }
wincode = { workspace = true, features = ["derive"] }

[lints]
workspace = true

[lib]
doctest = false
test = false
