[package]
name = "vite_task_ipc_shared"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
native_str = { workspace = true }
wincode = { workspace = true, features = ["derive"] }

[lints]
workspace = true

[lib]
doctest = false
test = false
