[package]
name = "vite_task_server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
futures = { workspace = true }
rustc-hash = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
vite_task_ipc_shared = { workspace = true }
wincode = { workspace = true, features = ["derive"] }

[target.'cfg(windows)'.dependencies]
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros", "time"] }
vite_task_client = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
test = false
